Adding PeriodicTable class for elements and their attributes

--- a/MoleculeUnityVR/Assembly-CSharp.csproj
+++ b/MoleculeUnityVR/Assembly-CSharp.csproj
@@ -128,9 +128,11 @@
      <Compile Include="Assets\SteamVR\Scripts\SteamVR_TrackedObject.cs" />
      <Compile Include="Assets\SteamVR\Scripts\SteamVR_UpdatePoses.cs" />
      <Compile Include="Assets\SteamVR\Scripts\SteamVR_Utils.cs" />
+     <Compile Include="Assets\_Scripts\Element.cs" />
      <Compile Include="Assets\_Scripts\GenerateMolecule.cs" />
      <Compile Include="Assets\_Scripts\LoadCmlData.cs" />
      <Compile Include="Assets\_Scripts\Molecule.cs" />
+     <Compile Include="Assets\_Scripts\PeriodicTable.cs" />
      <Compile Include="Assets\_Scripts\Rotator.cs" />
      <None Include="Assets\SteamVR\Resources\SteamVR_Fade.shader" />
      <None Include="Assets\SteamVR\Resources\SteamVR_ClearAll.shader" />
